# marmoset

./: .gitignore  .tool-versions  CLAUDE.md  DOCS.md  LICENSE  Makefile  PHASE3_PLAN.md  README.md  TYPE_MAP_REFACTOR_PLAN.md  dune-project  marmoset.opam  test.mr  test_implicit
.agents/skills/: issue-hunt  plan-review
.ai-rules/: README.md
.ai-rules/references/: marmoset-feature-workflows.md
.claude/skills/: feature-implement  feature-review  issue-fix  plan-check  plan-create
.github/workflows/: cross-platform-matrix.yml  lint.yml  manual-cross-platform.yml  pr-ci.yml  (+1 more)
docs/: ARCHITECTURE.md  BUG_FIX_PLAN.md  CURRENT_STATE.md  INDEX.md  PHASE_2_IMPLEMENTATION.md  ROADMAP.md  SYNTAX.md  SYNTAX_DECISIONS.md  SYNTAX_FINAL_DECISION.md  SYNTAX_LINEAGE.md
examples/: enums-typed.mr  fibonacci-typed.mr  indexing-typed.mr  indexing.mr  monkey.mr  new-syntax-upcase.mr  records-typed.mr  sum-typed.mr  sum.mr  traits-typed.mr  unions-typed.mr  user.mr
lib/: builtins.ml  compiler.ml  dune  eval.ml  infer.ml  lib.ml  marmoset.ml  parser.ml  typecheck.ml  types.ml  value.ml
nvim-marmoset/: README.md
src/: AST.roc  Environment.roc  Evaluator.roc  Lexer.roc  Object.roc  Parser.roc  REPL.roc  Token.roc  main.roc
std/: dune  option.mr  prelude.mr  result.mr
test/: dune  integration.sh  test_runtime_output.sh  test_typecheck_and_codegen.sh  trait_method_call_simple.marm  trait_method_call_test.marm  trait_method_test1.marm  trait_method_test2.marm
tree-sitter-marmoset/: grammar.js
vscode-marmoset/: README.md  package.json
zed-marmoset/: README.md  extension.toml
(+1959 files in other folders)
